tests/error/if/if_else_type.mml
(if true then true else true) + 2
